[package]
name = "rest"
version = "0.1.0"
authors = ["Natarajan Ganapathi <natarajanmca11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0.110"
diesel = "1.4.4"

[dev-dependencies]
