[package]
name = "rest"
version = "0.1.0"
authors = ["Natarajan Ganapathi <natarajanmca11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
rocket_contrib = "0.4.4"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }

[dev-dependencies]
